--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
+  <meta name="theme-color" content="#0D47A1"/>
   <title>Football's Info</title>
   <meta name="description" content="Football App"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,11 +29,78 @@
   <script src="js/materialize.min.js"></script>
   <script src="js/nav.js"></script>
   <script src="js/api.js"></script>
+  
   <script>
+
+    //REGISTER SERVICE WORKER
+    if("serviceWorker" in navigator) {
+      window.addEventListener("load", function(){
+        navigator.serviceWorker
+        .register("/service-worker.js")
+        .then(function() {
+          console.log("Pendaftaran service worker berhasil");
+          requestPermission();
+        })
+        .catch(function(){
+          console.log("Pendaftaran service Worker gagal");
+        });
+      });
+    } else {
+      console.log("Service worker belum didukung browser ini");
+    }
     // REQUEST API UNTUK PERTAMA KALI
     document.addEventListener("DOMContentLoaded", function() {
         getStandings();
     });
+
+    
+    function requestPermission(){
+      if('Notification' in window) {
+        Notification.requestPermission().then(function (result) {
+          if(result == "denied") {
+            console.log("Fitur notifikasi tidak di izinkan");
+            return;
+          } else if (result == "default") {
+            console.error("Pengguna menutup kotak dialog permintaan izin");
+            return;
+          }
+
+          // navigator.serviceWorker.getRegistration().then(function(reg){
+          //   reg.showNotification('Notifikasi diizinkan!');
+          // });
+
+          if(('PushManager' in window)) {
+            navigator.serviceWorker.getRegistration().then(function(registration){
+              registration.pushManager.subscribe({
+                userVisibleOnly: true,
+                applicationServerKey: urlBase64ToUnit8Array("qUHoKIGWq5qy0")
+              }).then(function(subscribe) {
+                console.log('Berhasil melakukan subscribe dengan endpoint: ', subscribe.endpoint);
+                console.log('Berhasil melakukan subscribe dengan p256dh key: ', btoa(String.fromCharCode.apply(new Uint8Array(subscribe.getKey('p256dh')))));
+                console.log('Berhasil melakukan subscribe dengan auth key: ', btoa(String.fromCharCode.apply(null, new Uint8Array(subscribe.getKey('auth')))));
+              }).catch(function(e) {
+                console.error('Tidak dapat melakukan subscribe ', e.message);
+              });
+
+            });
+          }
+        });
+      }
+    }
+
+    function urlBase64ToUnit8Array(base64String) {
+      const padding = '='.repeat((4 - base64String.length % 4) % 4);
+      const base64 = (base64String + padding)
+      .replace(/-/g, '+')
+      .replace(/-/g, '/')
+      const rawData = window.atob(base64);
+      const outputArray = new Uint8Array(rawData.length);
+      for(let i=0; i< rawData.length; i++) {
+        outputArray[i] = rawData.charCodeAt(i);
+      }
+      return outputArray;
+
+    }
   </script>
 </body>
 </html>
